--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
+
 project(progettoAPI_2021 C)
 
 set(CMAKE_C_STANDARD 99)
 
 add_executable(progettoAPI_2021 main.c)
+
+add_library(untitled library.h)
